change the image path

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background: url(./images/workshopBackground.jpg);
+  background: url(../images/workshopBackground.jpg);
   background-size: cover;
   background-position: 50% 50%;
   width: 100vw;
